--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prisma": "^6.4.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20",
