--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@prisma/client": "^6.4.1",
     "@radix-ui/themes": "^3.2.1",
     "classnames": "^2.5.1",
+    "easymde": "^2.19.0",
     "next": "14.2.13",
     "prisma": "^6.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
+    "react-simplemde-editor": "^5.2.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
