--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "delay": "^6.0.0",
     "easymde": "^2.19.0",
     "next": "14.2.13",
+    "next-auth": "^5.0.0-beta.25",
     "prisma": "^6.4.1",
     "react": "^18",
     "react-dom": "^18",
